--- a/www/css/RimacStyles.css
+++ b/www/css/RimacStyles.css
@@ -5,7 +5,7 @@
 }
 .container {
     background-color: #323131;
-    height: 100vh;
+    height: 90vh;
 }
 
 table td {
@@ -303,4 +303,12 @@ footer {
     border-color: #bbb;
     color: #38c;
     text-shadow: 0 1px 0 #0072ff;
+}
+.player {
+    position: fixed;
+    width: 100vw;
+    height: 50px;
+    bottom: 0;
+    left: 0;
+    z-index: 999999;
 }
